[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/main_menu/title.png" type="Texture" id=2]
[ext_resource path="res://assets/main_menu/label_new_game.png" type="Texture" id=3]
[ext_resource path="res://assets/main_menu/label_continue.png" type="Texture" id=4]
[ext_resource path="res://assets/main_menu/label_options.png" type="Texture" id=5]
[ext_resource path="res://assets/main_menu/version.png" type="Texture" id=6]
[ext_resource path="res://assets/main_menu/characters.png" type="Texture" id=7]
[ext_resource path="res://assets/sound/AreYouReady_Martian.WAV" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/LookInYourPromptPlease_Martian.WAV" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/Select 3 (Blub).wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]

resource_name = "in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "out"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewGameSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="MainMenu" type="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 688.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 586.0
margin_bottom = 608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Title" type="TextureRect" parent="HBoxContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 586.0
margin_bottom = 129.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 133.0
margin_right = 586.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="NewGame" type="ToolButton" parent="HBoxContainer/VBoxContainer/MenuOptions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 95.0
margin_right = 586.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 3 )
flat = true
align = 1
_sections_unfolded = [ "Mouse" ]

[node name="Continue" type="ToolButton" parent="HBoxContainer/VBoxContainer/MenuOptions" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 169.0
margin_right = 586.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 4 )
flat = true
align = 1
_sections_unfolded = [ "Mouse" ]

[node name="Options" type="ToolButton" parent="HBoxContainer/VBoxContainer/MenuOptions" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 243.0
margin_right = 586.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 5 )
flat = true
align = 1
_sections_unfolded = [ "Mouse" ]

[node name="VersionNote" type="TextureRect" parent="HBoxContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 529.0
margin_right = 586.0
margin_bottom = 608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 590.0
margin_right = 1126.0
margin_bottom = 608.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Size Flags" ]

[node name="Illustration" type="TextureRect" parent="HBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 134.0
margin_right = 534.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Transition" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "in"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/in = SubResource( 1 )
anims/out = SubResource( 2 )
blend_times = [  ]

[node name="NewGameSFX" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="NotImplementedSFX" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Select" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_focus_entered"]

[connection signal="focus_exited" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_focus_exited"]

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_mouse_entered"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_focus_entered"]

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_mouse_entered"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_pressed"]

[connection signal="focus_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_focus_entered"]

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_mouse_entered"]

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]

[connection signal="animation_finished" from="Transition" to="." method="_on_Transition_animation_finished"]


